<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_page_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainPage"
    tools:showIn="@layout/app_bar_main_page">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:gravity="center"
        android:text="@string/submit"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/use_my_location"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/street_address"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPostalAddress"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/city"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/street_address"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/zip_code"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.828" />

    <EditText
        android:id="@+id/zip_code"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <Spinner
        android:id="@+id/district_type"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zip_code" />

    <TextView
        android:id="@+id/street_address_label"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/street_address"
        app:layout_constraintEnd_toStartOf="@+id/street_address"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city_label"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/zip_code_label"
        app:layout_constraintEnd_toStartOf="@+id/city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_address_label"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/zip_code_label"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/zip_code"
        app:layout_constraintBottom_toTopOf="@+id/district_select_label"
        app:layout_constraintEnd_toStartOf="@+id/zip_code"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/district_select_label"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:text="@string/district_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/district_type"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>